# TmpFile

ChatRoom/: CMakeLists.txt  adduseritem.cpp  adduseritem.h  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuseritem.cpp  chatuseritem.h  chatuseritem.ui  chatuserlist.cpp  chatuserlist.h  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  clickedoncelabel.h  (+57 more)
ChatRoom/style/: stylesheet.qss
ChatServer/: CMakeLists.txt  CServer.h  CSession.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MysqlManager.cpp  MysqlManager.h  MysqlPool.cpp  MysqlPool.h  RedisConnPool.h  UserManager.h  config.ini  const.h  data.h
ChatServer2/: CMakeLists.txt  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  IOContextPool.cpp  IOContextPool.h  MsgNode.h  MysqlDao.cpp  MysqlDao.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UserManager.cpp  config.ini  main.cpp  message.grpc.pb.h  message.proto
GateServer/: CMakeLists.txt  CServer.cpp  CServer.h  ConfigManager.h  GRPCConnPool.hpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.h  MysqlManager.cpp  MysqlManager.h  RedisManager.h  StatusGrpcClient.cpp  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  main.cpp  message.pb.h
StatusServer/: CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  ConfigManager.cpp  MysqlDao.cpp  RedisConnPool.cpp  RedisManager.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  main.cpp  message.pb.cc
VerifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
